--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -42,6 +42,9 @@
             </li>-->
             <li><%= link_to "ログアウト", destroy_admin_user_session_path, method: :delete %></li>
           </ul>
+          <% unless current_user.normal? %>
+            <p class="navbar-text"><span class="label label-info"><%= current_user.role.upcase %></span></p>
+          <% end %>
         <% end %>
       </div><!--/.nav-collapse -->
     </div>
