Add StaticPagePolicy#can_use_nav? policy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <%= render 'layouts/header' %>
   <% end %>
 
-  <% if @bot.present? && !chat_page? && current_user.normal? %>
+  <% if !chat_page? && policy(:static_pages).can_use_nav?(@bot) %>
     <div id="sidebar-wrapper" class="col-sm-2 col-xs-12">
       <div class="sidebar-nav list-group">
         <%= link_to edit_bot_path(@bot), class: 'bot-profile list-group-item text-center' do %>
