--- a/app/views/imported_sentence_synonyms/index.html.slim
+++ b/app/views/imported_sentence_synonyms/index.html.slim
@@ -2,7 +2,11 @@
   .well
     = form_tag bot_imported_sentence_synonyms_path(@bot), class: 'form-inline', method: :get do
       = collection_select :filter, :worker_id, User.worker, :id, :email, { include_blank: true, prompt: '-- ワーカーを選択 --', selected: params.dig(:filter, :worker_id) }, class: 'form-control'
-      = submit_tag '絞込', class: 'btn btn-default'
+      = space 10
+      label 作業日を指定
+      = date_select :filter, :target_date, { selected: ((target_date = params.dig(:filter, :target_date)).present? ? Date.parse(target_date) : Date.today), prompt: '--' }, class: 'form-control'
+      = space 10
+      = submit_tag '絞込', class: 'btn btn-info'
 
 
   - if params.dig(:filter, :worker_id).present?
