Apply target_date to imported_sentence_synonyms/index view

--- a/app/views/imported_sentence_synonyms/index.html.slim
+++ b/app/views/imported_sentence_synonyms/index.html.slim
@@ -8,12 +8,11 @@
       = space 10
       = submit_tag '絞込', class: 'btn btn-info'
 
-
-  - if params.dig(:filter, :worker_id).present?
+  - if params.dig(:filter, :worker_id).present? || @target_date.present?
     .well
       - total_count = @imported_training_messages.count
-      - completed_count = @imported_training_messages.joins(:sentence_synonyms).where('sentence_synonyms.created_user_id' => params.dig(:filter, :worker_id)).uniq.count
-      code #{ completed_count} / #{ @imported_training_messages.count }, 残り:#{ total_count - completed_count }
+      - completed_count = @imported_training_messages.completed_count_for(params[:filter][:worker_id], @target_date)
+      code #{ completed_count } / #{ @imported_training_messages.count }, 残り:#{ total_count - completed_count }
 
 table.table.table-striped
   thead
@@ -29,9 +28,7 @@ table.table.table-striped
           th= itm.question
           th
             table.table.table-striped: tbody
-              - ss_list = policy_scope(itm.sentence_synonyms)
-              - ss_list = ss_list.select{ |ss| ss.created_user_id == params[:filter][:worker_id].to_i } if params.dig(:filter, :worker_id).present?
-              - ss_list.each do |ss|
+              - policy_scope(itm.sentence_synonyms).target_date(@target_date).target_user(params.dig(:filter, :worker_id)).each do |ss|
                 tr
                   td= ss.id
                   td= ss.body
