--- a/app/views/imported_sentence_synonyms/new.html.slim
+++ b/app/views/imported_sentence_synonyms/new.html.slim
@@ -1,3 +1,6 @@
+- form_url = @bot ? bot_imported_sentence_synonyms_path(@bot) : imported_sentence_synonyms_path
+- skip_url = @bot ? new_bot_imported_sentence_synonym_path(@bot) : new_imported_sentence_synonym_path
+
 .panel.panel-default
   .panel-heading
     h4 同義文登録
@@ -5,7 +8,7 @@
   .panel-body
     .pull-right
       | 累計登録数: #{current_user.sentence_synonyms.count}件
-    = bootstrap_form_for @imported_training_message, url: bot_imported_sentence_synonyms_path(@bot), method: :post do |f|
+    = bootstrap_form_for @imported_training_message, url: form_url, method: :post do |f|
       = f.hidden_field :id
       = f.static_control :question
 
@@ -13,8 +16,7 @@
         | 同義文
       = f.fields_for :sentence_synonyms, @imported_training_message.sentence_synonyms.select{|ss| ss.new_record?} do |ss|
         = ss.text_field :body, hide_label: true
-        = ss.hidden_field :created_user_id, value: current_user.id
 
       = f.submit '登録する', class: 'btn btn-success'
       | &nbsp;
-      = link_to 'スキップする', new_bot_imported_sentence_synonym_path(@bot), class: 'btn btn-default'
+      = link_to 'スキップする', skip_url, class: 'btn btn-default'
