Fix chats/show view

--- a/app/views/chats/show.html.slim
+++ b/app/views/chats/show.html.slim
@@ -1,5 +1,5 @@
 .chat-container
-  - @dummy_messages.each do |message|
+  - @chat.messages.each do |message|
     - if message.bot?
       = render 'bot', message: message
     - elsif message.guest?
