--- a/app/views/chats/show.html.slim
+++ b/app/views/chats/show.html.slim
@@ -1,4 +1,4 @@
-.chat-container
+.chat-container.chat-area
   - @chat.messages.each do |message|
     - if message.bot?
       = render 'bot', message: message
@@ -8,7 +8,7 @@
 .chat-form: .container
   = form_for @chat.messages.build, url: chats_messages_path(@bot.token), remote: true do |f|
     = f.text_field :body, placeholder: '質問を入れてください', hide_label: true, class: 'chat-form__text-field'
-    = f.button class: 'chat-form__submit' do
+    = f.button class: 'chat-form__submit', id: 'chat-submit' do
       span.visible-sm.visible-md.visible-lg 質問
       span.visible-xs: i.fa.fa-icon.fa-paper-plane-o
 
