--- a/app/views/question_answers/index.html.slim
+++ b/app/views/question_answers/index.html.slim
@@ -1,4 +1,6 @@
 h1 Q&A
+.text-right
+  = link_to t('helpers.link.new'), new_bot_question_answer_path(@bot), class: "btn btn-default"
 table.table.table-striped
   thead
     tr
