--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+  <% if Rails.env.production? %>
+    <%= render 'layouts/shared/google_analytics' %>
+  <% end %>
+
   <% if params[:token].present? %>
     <%= render 'layouts/header_bot', bot: @bot %>
   <% else %>
