--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <% if Rails.env.production? %>
+    <%= render 'layouts/shared/mixpanel' %>
+  <% end %>
 </head>
 <body>
   <% if Rails.env.production? %>
