--- a/app/assets/stylesheets/modules/master-detail-panel.scss
+++ b/app/assets/stylesheets/modules/master-detail-panel.scss
@@ -1,8 +1,14 @@
 .master-detail-panel {
   $-header-height: 60px;
+  position: relative;
+  overflow-y: hidden;
   border: 1px solid $gray-lighter;
 
   &__header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
     padding: 0 16px;
     height: $-header-height;
     border-bottom: 1px solid $gray-lighter;
@@ -17,10 +23,19 @@
 
   &__body {
     @include pie-clearfix;
-    position: relative;
+    position: absolute;
+    top: $-header-height;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow-y: auto;
   }
 
   &__master {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
     overflow: auto;
     float: left;
     width: 30%;
