--- a/app/views/bots/_form.html.erb
+++ b/app/views/bots/_form.html.erb
@@ -24,7 +24,8 @@
   <div class="actions">
     <%= f.submit class: 'btn btn-success' %>
     <div class="pull-right">
-      <%= link_to '学習データリセット', [:reset, @bot], class: 'btn btn-danger', method: :post, data: { confirm: '学習データが全て削除されます。本当にリセットしてもよろしいですか？' }  %>
+      <span data-component="BotResetButton"
+            data-url="<%= reset_bot_path(@bot) %>"></span>
     </div>
   </div>
   <%= javascript_include_tag 'bots/form' %>
