--- a/app/views/chats/_bot.html.slim
+++ b/app/views/chats/_bot.html.slim
@@ -31,3 +31,13 @@
         - message.answer.decision_branches.each do |decision_branch|
           = link_to choices_chats_path(message.parent.bot.token, decision_branch), data: { method: :post, remote: true, role: 'chat-decision-branch', event_name: 'Select decision branch', bot_id: @bot.id, bot_name: @bot.name, chat_id: @chat.id, decision_branch_id: decision_branch.id, message_id: message.id }, class: 'chat-decision-branches__item' do
             = decision_branch.body
+
+- if message.similar_question_answers.present?
+  .chat-row
+    .chat-decision-branches: .chat-decision-branches__container
+      .chat-decision-branches__title こちらの質問ではないですか？
+      .chat-decision-branches__items
+        - message.similar_question_answers.each do |question_answer|
+          / TODO
+          = link_to '#', method: :post,remote: true, class: 'chat-decision-branches__item' do
+            = question_answer.question
