--- a/app/views/chats/messages/create.js.erb
+++ b/app/views/chats/messages/create.js.erb
@@ -4,7 +4,7 @@ $('.chat-area').append("<%= escape_javascript(render('chats/guest', message: @me
 <% @bot_messages.each do |bot_message| %>
 <%# 会話している風にするため意図的にbotの発言を遅らせる %>
 $('.chat-area').delay(500).queue(function() {
-  $(this).append("<%= escape_javascript(render('chats/bot', message: bot_message)) %>")
+  $(this).append("<%= escape_javascript(render('chats/bot', message: bot_message, token: @bot.token, message_id: bot_message.id)) %>")
     .dequeue();
 
   <% if bot_message.try(:answer).try(:decision_branches).try(:present?) %>
@@ -12,6 +12,10 @@ $('.chat-area').delay(500).queue(function() {
   <% else %>
     enable_question_field();
   <% end %>
+
+  if (typeof window.initMessageRatingButtons === "function") {
+    initMessageRatingButtons();
+  }
 });
 <% end %>
 
