--- a/app/views/imports/_form.html.erb
+++ b/app/views/imports/_form.html.erb
@@ -9,6 +9,8 @@
   <%= f.file_field :file, label: 'ファイル' %>
 
   <div class="actions">
-    <%= f.submit class: 'btn btn-success' %>
+    <%= f.submit 'Shift_JISでインポート', class: 'btn btn-success' %>
+    <%= f.submit 'UTF-8でインポート', class: 'btn btn-success' %>
+    <p class="help-block">※Excelで作成したCSVのエンコードはShift_JISです</p>
   </div>
 <% end %>
