--- a/app/views/imported_sentence_synonyms/index_alert.html.slim
+++ b/app/views/imported_sentence_synonyms/index_alert.html.slim
@@ -6,7 +6,8 @@ p これはとても時間のかかる処理なので以下のフィルターを
 p
   |構わず全件表示させたい場合はこちらのボタンを押してくだだい
   = space
-  = link_to '全同義文を表示する', imported_sentence_synonyms_path(force: true), class: 'btn btn-warning', data: { confirm: '本当に全同義文を表示しますか？' }
+  - all_path = params[:bot_id].present? ? bot_imported_sentence_synonyms_path(params[:bot_id], force: true) : imported_sentence_synonyms_path(force: true)
+  = link_to '全同義文を表示する', all_path, class: 'btn btn-warning', data: { confirm: '本当に全同義文を表示しますか？' }
 
 p 各ボットの同義文一覧はこちら
 ul
