Move blank layout to errors view folder

--- a/app/views/errors/error_500.html.erb
+++ b/app/views/errors/error_500.html.erb
@@ -1,8 +1,10 @@
-<div class="error-info">
-  <h2>ページが表示できません</h2>
+<%= render layout: 'errors/layout' do %>
+  <div class="error-info">
+    <h2>ページが表示できません</h2>
 
-  <p>
-    一時的なエラーが発生し、ページが表示出来ませんでした。<br />
-    解決に取り組んでおりますので、対応完了までお待ち下さい。
-  </p>
-</div>
+    <p>
+      一時的なエラーが発生し、ページが表示出来ませんでした。<br />
+      解決に取り組んでおりますので、対応完了までお待ち下さい。
+    </p>
+  </div>
+<% end %>
