--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <% if Rails.env.production? %>
     <%= render 'layouts/shared/analytics/mixpanel' %>
+  <% if user_signed_in? %>
+    <%= render 'layouts/shared/js_vars/current_user' %>
   <% end %>
 </head>
 <body>
